# ryven-node-generator

./: .env.example  .gitignore  README.md  generator.py  node_preview.py  pyproject.toml  requirements-ai.txt  ui.py
ai_assistant/: __init__.py  config.py  examples.py  json_parse.py  merge.py  preview_diff.py  prompts.py  schemas.py  service.py
docs/: AI_MODULE_ARCHITECTURE.md  IMPROVEMENTS.md  agent-react-and-claude-code-reference.md  agent-refactor-roadmap-for-ai.md  ai-agent-architecture-deep-dive.md
ryven_node_generator/: __init__.py  __main__.py
ryven_node_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ryven_node_generator/ai_assistant/: __init__.py  config.py  context_budget.py  examples.py  exceptions.py  json_parse.py  merge.py  preview_diff.py  prompts.py  schemas.py  service.py  session_file_log.py  validation.py
ryven_node_generator/assets/: widget_template.py
ryven_node_generator/codegen/: __init__.py  generator.py  templates.py  templates_v2.py
ryven_node_generator/preview/: __init__.py
ryven_node_generator/project/: __init__.py  workspace.py
ryven_node_generator/ui/: __init__.py  constants.py  main_window.py  widgets.py
scripts/: apply_american_spelling.py  count_spelling.py
scripts/evaluation/: generate_strategy_trials.py  plot_generator_evaluation.py  plot_strategy_results.py  (+3 more)
tests/: __init__.py  test_ai_assistant_contract.py  test_context_budget.py  test_merge_config_diff.py  test_react_loop_submit_normalize.py  test_react_tool_host.py  test_stub_runner.py  test_tools_paths.py
(+33 files in other folders)
